2006-10-29  Bruno Haible  <bruno@clisp.org>

	* lib/fstrcmp.h: Wrap declarations in extern "C".

2006-10-29  Bruno Haible  <bruno@clisp.org>

	Make it compile in C++ mode.
	* lib/backupfile.c (find_backup_file_name): Cast malloc result.
	* lib/xalloc.h (xrealloc): Define as template with appropriate return
	type.
	* lib/xstrdup.c (xstrdup): Cast xmalloc result.

2006-10-26  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16 released.

2006-10-26  Bruno Haible  <bruno@clisp.org>

	* modules/canonicalize (Makefile.am): Remove EXTRA_DIST. Now done by
	gnulib-tool.
	* modules/relocatable (Makefile.am): Likewise.
	* modules/relocwrapper (Makefile.am): Likewise.

2006-10-25  Bruno Haible  <bruno@clisp.org>

	* m4/relocatable.m4 (AC_RELOCATABLE_BODY): Renamed from AC_RELOCATABLE,
	without the AC_LIBOBJ invocation.
	(AC_RELOCATABLE): New macro. Invoke AC_LIBOBJ here.
	* modules/relocwrapper (configure.ac): Invoke AC_RELOCATABLE instead
	of requiring it.
	* modules/gettext-tools-libgettextpo-misc: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2006-10-25  Bruno Haible  <bruno@clisp.org>

	* lib/gettext.h (_LIBGETTEXT_HAVE_VARIABLE_SIZE_ARRAYS): Define to
	false for non-gcc C++ compilers.
	Reported by Nelson H. F. Beebe <beebe@math.utah.edu>.

2006-10-24  Bruno Haible  <bruno@clisp.org>

	* modules/gettext-tools-misc (Makefile.am): Add also $(top_srcdir) to
	AM_CPPFLAGS. Needed so that woe32dll/export.h is found while compiling
	gettextlib-exports.c in a VPATH build.
	Reported by Charles Wilson <cygwin@cwilson.fastmail.fm>.

2006-10-24  Bruno Haible  <bruno@clisp.org>

	* modules/gettext-tools/misc (Makefile.am): Use rm -f instead of
	$(RM).

2006-10-24  Bruno Haible  <bruno@clisp.org>

	* lib/fstrcmp.c (keys_init_once): Remove semicolon after
	gl_once_define invocation.

2006-10-23  Bruno Haible  <bruno@clisp.org>

	Moved last change to gnulib.
	* lib/obstack.h.diff: Undo last change.
	* lib/obstack.c.diff: Remove file.
	* Makefile.am (EXTRA_DIST): Remove it.
